added order matching logic

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "[Read the requirements here ](https://github.com/mandeep9888/BFX-order-matching-engine/blob/16f70f30485f6231f60e3b0b68dd9e2411c702b8/node-blockchain.md)",
   "main": "index.js",
   "scripts": {
-    "test-client" : "node test-client.js",
-    "test-server" : "node test-server.js",
+    "test-client" : "node samples/test-client.js",
+    "test-server" : "node samples/test-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
