--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test-client" : "node samples/test-client.js",
     "test-server" : "node samples/test-server.js",
+    "client" : "node src/client.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
